--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "groq-sdk": "^0.36.0",
+    "lucide-react": "^0.554.0",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
