--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "elevenlabs": "^1.59.0",
     "framer-motion": "^12.23.24",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
