--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas": "^3.2.0",
     "elevenlabs": "^1.59.0",
     "framer-motion": "^12.23.24",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
     "next": "^15.0.0",
+    "pdf-parse": "^2.4.5",
+    "pdf-poppler": "^0.2.3",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
