--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^15.0.0",
     "pdf-parse": "^2.4.5",
     "pdf-poppler": "^0.2.3",
+    "pdf2json": "^4.0.0",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
