--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^12.23.24",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
+    "marked": "^17.0.1",
     "next": "^15.0.0",
+    "openai": "^6.9.1",
     "pdf-parse": "^2.4.5",
     "pdf-poppler": "^0.2.3",
     "pdf2json": "^4.0.0",
